Closed
Bug 626855
Opened 15 years ago
Closed 15 years ago
Crash: trying to scroll HTML page with frameset
Categories
(Core :: IPC, defect)
Core
IPC
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| fennec | 2.0b4+ | --- |
People
(Reporter: stechz, Assigned: stechz)
Details
Attachments
(1 file)
|
6.02 KB,
patch
|
cjones
:
review+
|
Details | Diff | Splinter Review |
STR with Fennec:
1) Open http://www.htmlcodetutorial.com/frames/frameset.html
2) Try to scroll (in a debug build)
| Assignee | ||
Comment 1•15 years ago
|
||
| Assignee | ||
Comment 2•15 years ago
|
||
Comment on attachment 504880 [details] [diff] [review]
Crash: trying to scroll HTML page with frameset
Layers were not properly getting their scroll IDs updated if there is no root scroll pane for a presshell. This happens for <framesets> at least.
Attachment #504880 -
Flags: review?(jones.chris.g)
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → ben
Updated•15 years ago
|
Attachment #504880 -
Flags: review?(jones.chris.g) → review+
| Assignee | ||
Comment 3•15 years ago
|
||
To potential approvers: patch is low risk, and fixes panning for sites without scroll frames.
Updated•15 years ago
|
tracking-fennec: --- → 2.0b4+
| Assignee | ||
Comment 4•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•