Bug 626855 Crash: trying to scroll HTML page with frameset r=cjones a=blocking-fennec